add html for basic setup, write setup function, conditions for wins/losses

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p>When you win or lose, the game will restart. You will have a new target number and the crystals will have new values.</p>
     </div>
 
-    <p><span id="target"></span></p>
+    <p>Target: <span id="target"></span></p>
 
     <div class="score">
         <p>Wins: <span id="wins">0</span></p>
@@ -29,6 +29,8 @@
 
     <div id="crystals">
     </div>
+
+    <p>Your score so far is: <span id="score">0</span></p>
 
     <script src="assets/javascript/game.js"></script>
 </body>
